plugins {
    id 'java'
    id 'application'
}

group = 'by.ezer'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.hibernate:hibernate-core:7.1.0.Final'
    implementation 'org.postgresql:postgresql:42.7.7'
    compileOnly 'org.projectlombok:lombok:1.18.40'
    annotationProcessor 'org.projectlombok:lombok:1.18.40'
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
    implementation 'org.slf4j:slf4j-simple:1.7.36'
}

java {
    sourceCompatibility = 24
    targetCompatibility = 24
}

application {
    mainClass = 'by.ezer.Main'
}